# syntha

./: ..\..\..\windows\system32\config\sam  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  C:\Windows\System32\config\SAM  CHANGELOG.md  CLA-TEMPLATE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_STATUS.md  FRAMEWORK_INTEGRATION.md  GITHUB_PAGES_SETUP.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  TASK_COMPLETION_SUMMARY.md  TESTING_SUMMARY.md  TOOL_ACCESS_CONTROL_IMPLEMENTATION.md  USER_ISOLATION_README.md  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-docs.txt  requirements-test.txt  setup.py  simple_test.py  syntha_context.db  test_basic.py
.github/: dependabot.yml  pull_request_template.md
Syntha_v2/: mkdocs.yml
docs/: CI_CD_TESTING.md  Gemfile  POSTGRESQL_TESTING.md  PRODUCTION_READINESS.md  README.md  TESTING.md  _config.yml  core-concepts.md  generate_docs.py  index.md  installation.md
examples/: agno_integration_example.py  automatic_framework_integration.py  basic_usage.py  complete_example.py  comprehensive_framework_examples.py  framework_integration_examples.py  multi_user_isolation.py  openai_integration.py  postgresql_example.py  postgresql_flexible_config.py  real_world_usage_examples.py  simple_framework_test.py  testing_temp.py  tool_access_control.py  topic_based_example.py  topic_based_routing.py  topic_based_routing_demo.py  user_isolation_demo.py
resources/: POSTGRESQL_TESTING.md  PRODUCTION_READINESS.md  TESTING.md
scripts/: test_access_control.py
syntha/: __init__.py  (+9 more)
(+119 files in other folders)
